# tutorial

./: README.txt  circ.m  ex.cpp  ex1.cpp
commenting/: ex1.cpp
compilation/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compilation.kdev4  ex1  ex1.cpp  ex2  ex2.cpp  ex3.cpp  helper1.cpp  helper1.h  helper2.cpp  helper2.h  helper3.h
compilation/.kdev4/: compilation.kdev4
doxygen/: ex2.cpp
ex1-simple/: CMakeCache.txt  CMakeLists.txt  HelloWorld  Makefile  a.out  cmake_install.cmake  main.cpp
ex2-includes/: .helper1.h.swp  .main.cpp.swo  .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  Makefile  a.out  cmake_install.cmake  ex2  helper1.h  main.cpp
ex2-includes/subfolder/: .helper2.h.swp  helper2.h
ex3-linking/: .main.cpp.swp  CMakeCache.txt  CMakeLists.txt  CMakeLists.txt~  Makefile  a.out  cmake_install.cmake  ex3  main.cpp
ex3-linking/subfolder/: local.cpp  local2.cpp
latex/: ex3.tex
matlab/: circ.m  tri.m
runtime/: CMakeLists.txt  ex1.cpp  ex2.cpp
